# livekit_ros2_bridge

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  DEVELOPING.md  README.md  livekit_bridge.params.example.yaml  package.xml  parameters.yaml
.github/workflows/: build.yml
cmake/: build_info.hpp.in  livekit_sdk.cmake
docs/: configuration.md  protocol.md
include/livekit_ros2_bridge/: node.hpp
livekit_ros2_bridge/: runtime.py
livekit_ros2_bridge/core/: logging.py  protocol.py
livekit_ros2_bridge/livekit/: room_publisher.py  router.py  session.py  utils.py
livekit_ros2_bridge/ros2/: executor_dispatcher.py  publisher.py  publisher_registry.py  ros_logging.py  service_caller.py  subscription_registry.py  topic_subscription.py
src/: access_policy.cpp  access_policy.hpp  connection_watchdog.cpp  connection_watchdog.hpp  data_track_publisher.cpp  data_track_publisher.hpp  node.cpp  parameters.yaml  room_connection.cpp  room_connection.hpp  ros_executor_queue.cpp  ros_executor_queue.hpp  ros_service_caller.cpp  ros_service_caller.hpp  ros_topic_publisher.cpp  ros_topic_publisher.hpp  rpc_router.cpp  rpc_router.hpp  runtime.cpp  runtime.hpp  runtime_config.cpp  runtime_config.hpp  subscription_lease_manager.cpp  subscription_lease_manager.hpp  subscription_qos.cpp  subscription_qos.hpp
src/protocol/: cdr.cpp  cdr.hpp  constants.hpp  current_value.hpp  current_value_json.cpp  current_value_json.hpp  echo_once.hpp  echo_once_json.cpp  echo_once_json.hpp  interfaces.hpp  interfaces_json.cpp  interfaces_json.hpp  resources.hpp  resources_json.cpp  resources_json.hpp  services.hpp  services_json.cpp  services_json.hpp  snapshot.hpp  snapshot_json.cpp  snapshot_json.hpp  subscriptions.hpp  subscriptions_json.cpp  subscriptions_json.hpp  topic_publish.hpp  topic_publish_json.cpp  topic_publish_json.hpp  validation_error.hpp
src/protocol/detail/: base64.cpp  base64.hpp  json_fields.hpp
src/ros_interfaces/: definition_lookup.cpp  definition_lookup.hpp  failure_cache.hpp  graph_lookup.hpp  message_type_support.cpp  message_type_support.hpp  service_type_support.cpp  service_type_support.hpp
src/utils/: callback_gate.hpp  concurrency_limiter.hpp  event_throttle.hpp  log_event.hpp  ros_resource_name_utils.hpp  scope_exit.hpp  serialized_message.hpp  trim.hpp
src/video/: gstreamer_pipeline.cpp  gstreamer_pipeline.hpp  gstreamer_resources.hpp  gstreamer_stream.cpp  gstreamer_stream.hpp  pipeline_description.hpp  pipeline_failure_handler.cpp  pipeline_failure_handler.hpp  ros_stream.cpp  ros_stream.hpp  stream_config.cpp  stream_config.hpp  stream_spec.cpp  stream_spec.hpp  track_publisher.cpp  track_publisher.hpp
test/: test_livekit_router_rpc.py  test_room_publisher.py  test_ros_executor_dispatcher.py  test_ros_logging.py  test_ros_publisher_access.py  test_ros_publisher_registry.py  test_ros_service_access.py  test_ros_subscription_egress.py  test_ros_subscription_registry.py  test_runtime.py
test/cpp/: fake_room_connection.hpp  protocol_test_support.hpp  ros_test_support.hpp  test_access_policy.cpp  test_base64.cpp  test_callback_gate.cpp  test_concurrency_limiter.cpp  test_connection_watchdog.cpp  test_cpp_smoke.cpp  test_current_value_payloads.cpp  test_data_track_publisher.cpp  test_echo_once_payloads.cpp  test_event_throttle.cpp  test_gstreamer_resources.cpp  test_interface_payloads.cpp  test_log_event.cpp  test_node.cpp  test_payload_helpers.cpp  test_resource_list_payloads.cpp  test_room_connection.cpp  test_ros_executor_queue.cpp  test_ros_graph_lookup.cpp  test_ros_interface_definition_lookup.cpp  test_ros_resource_name_utils.cpp  test_ros_service_caller.cpp  test_ros_service_type_support.cpp  test_ros_topic_publisher.cpp  test_rpc_router.cpp  test_runtime.cpp  test_runtime_config.cpp  test_scope_exit.cpp  test_service_call_payloads.cpp  test_snapshot_payloads.cpp  test_subscription_lease_manager.cpp  test_subscription_payloads.cpp  test_subscription_qos.cpp  test_topic_publish_request.cpp  test_video_stream_spec.cpp  test_video_streams.cpp  test_video_track_publisher.cpp
test/support/: logger_harness.py  router_harness.py
